5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1836_1274.log
== SUBMITION (2019-07-01 22:41:36) 
-- CODE:
n=int(input("Entre com um numero:"))
mat=ones((n,n),dtype=int)
linha=shape(mat)
for i in range(n):
	for j in range(n):
		if (i<j):
			mat[i,j]=i+1
		elif(j>i):
			mat[i,j]=j+1
		else:
			mat[i,j]=j+1
print(mat)
	
-- EXECUTION TIME:
0.719469
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1274/main.py", line 2, in <module>
    mat=ones((n,n),dtype=int)
NameError: name 'ones' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:41:46) 
-- CODE:
n=int(input("Entre com um numero:"))
mat=ones((n,n),dtype=int)
linha=shape(mat)
for i in range(n):
	for j in range(n):
		if (i>j):
			mat[i,j]=i+1
		elif(j>i):
			mat[i,j]=j+1
		else:
			mat[i,j]=j+1
print(mat)
	
-- EXECUTION TIME:
0.878415
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1274/main.py", line 2, in <module>
    mat=ones((n,n),dtype=int)
NameError: name 'ones' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:43:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
n=int(input("Entre com um numero:"))
mat=ones((n,n),dtype=int)
linha=shape(mat)
for i in range(n):
	for j in range(n):
		if (i>j):
			mat[i,j]=i+1
		elif(j>i):
			mat[i,j]=j+1
		else:
			mat[i,j]=j+1
print(mat)
	
-- EXECUTION TIME:
1.02931
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 2 3]
 [2 2 3]
 [3 3 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 2 3 4 5 6 7 8]
 [2 2 3 4 5 6 7 8]
 [3 3 3 4 5 6 7 8]
 [4 4 4 4 5 6 7 8]
 [5 5 5 5 5 6 7 8]
 [6 6 6 6 6 6 7 8]
 [7 7 7 7 7 7 7 8]
 [8 8 8 8 8 8 8 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:43:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
n=int(input("Entre com um numero:"))
mat=ones((n,n),dtype=int)
linha=shape(mat)
for i in range(n):
	for j in range(n):
		if (i<j):
			mat[i,j]=i+1
		elif(j>i):
			mat[i,j]=j+1
		else:
			mat[i,j]=j+1
print(mat)
	
-- EXECUTION TIME:
1.00725
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
